--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,49 @@
+cat > .gitignore << 'EOF'
+# Virtual Environment
+env/
+venv/
+.env
+.venv
 
-echo "env/
+# Python
 __pycache__/
+*.py[cod]
+*$py.class
+*.so
 *.pyc
 *.pyo
-.DS_Store
+*.pyd
+.Python
+
+# IDE
 .vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs
 *.log
-.env" > .gitignore
+logs/
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
+# Other
+.coverage
+.pytest_cache/
+.mypy_cache/
+.dmypy.json
+dmypy.json
+EOF
